<resources>
    <string name="app_name">Shecan</string>
    <string name="quick_toggle">Toggle</string>
    <string name="notice_main_disconnected">You cannot access sanctioned websites and services. Press the button below to activate.</string>
    <string name="notice_main_connected">You have access to sanctioned websites and services</string>
    <string name="notice_activated">Shecan is activated.</string>
    <string name="notice_start_test">Testing specified DNS server…</string>
    <string name="notice_queries">DNS query times:</string>
    <string name="notice_legacy_api">The current Android API can not support all the features.</string>
    <string name="notice_need_restart">Re-activate Shecan to make the settings take effect.</string>
    <string name="notice_fill_in_all">Please fill in all configuration items.</string>
    <string name="notice_delete_confirm_prompt">Are you sure you want to remove this configuration?</string>
    <string name="notice_export_complete">Export completed.</string>
    <string name="logo_text">shecan</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_dns_test">Test DNS</string>
    <string name="action_start_test">Start test</string>
    <string name="action_home">Home</string>
    <string name="action_rules">Rules</string>
    <string name="action_dns_servers">Servers</string>
    <string name="action_removed">Removed.</string>
    <string name="action_undo">Undo</string>
    <string name="action_log">Log</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reload">Reload</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="export">Export</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_text_activate">Activate</string>
    <string name="button_text_deactivate">Deactivate</string>
    <string name="config_dns_server">DNS server config</string>
    <string name="config_rule">Rule config</string>
    <string name="settings_system">System Settings</string>
    <string name="settings_boot">Auto activate on boot</string>
    <string name="settings_server">Server Settings</string>
    <string name="settings_notification">Show notification</string>
    <string name="settings_dns_test_servers">DNS test servers</string>
    <string name="settings_advanced">Advanced System Settings</string>
    <string name="settings_advanced_on">On</string>
    <string name="settings_dns_over_tcp">DNS over TCP</string>
    <string name="settings_log_size">Log size limit</string>
    <string name="settings_debug_output">Debug output</string>
    <string name="settings_server_name">Server Name</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_server_port">Server Port</string>
    <string name="server_shecan_primary">Shecan</string>
    <string name="server_shecan_secondary">Standard Shecan</string>
    <string name="server_shecan_pro_primary">Pro</string>
    <string name="server_shecan_pro_secondary">Standard Pro</string>
    <string name="primary_server">Primary DNS server</string>
    <string name="secondary_server">Secondary DNS server</string>
    <string name="test_domain">Test domain:</string>
    <string name="test_time_used">Time used:</string>
    <string name="test_dns_server">DNS server:</string>
    <string name="test_result_resolved">Address:</string>
    <string name="test_failed">DNS query failed. Timeout or unknown hostname.</string>
    <string name="test_test_domain">check.shecan.ir</string>
    <string name="nav_version">Version:</string>
    <string name="settings_language">Language</string>
    <string name="notification_channel_default">Default Channel</string>
    <string name="notification_channel_default_description">Default channel for posting notifications.</string>
    <string name="notification_channel_hiddenicon">Channel with no icon</string>
    <string name="notification_channel_hiddenicon_description">This channel shows no icon in the notification bar</string>
    <string name="about_us_text">سامانه «شکن» یک تحریم‌شکن ایرانی و قانونی است که امکان دسترسی به سایت‌های تحریم‌شده را بدون نیاز به ابزارهای ناقض حریم خصوصی و امنیت مانند فیلترشکن، وی‌پی‌ان و پراکسی به آسانی و برای استفاده شخصی به رایگان فراهم می‌کند.</string>
    <string name="website_link"><a href="https://shecan.ir/">shecan.ir</a></string>
    <string name="telegram_link"><a href="https://t.me/shecan_ir">@shecan_ir</a></string>
    <string name="email_link"><a href="mailto:info@shecan.ir">info@shecan.ir</a></string>
    <string name="github_link"><a href="https://github.com/shecanir/shecan-android">shecanir/shecan-android</a></string>
    <string name="saramad_url">http://logo.saramad.ir/verify.aspx?CodeShamad=1-2-691804-63-0-3</string>
    <string name="shecan_logo_description">Shecan Logo</string>
    <string name="saramad_logo_description">Saramad Logo</string>
    <string name="ic_bonyan_logo">\ue809</string>
    <string name="bonyan_url">https://bonyan.co</string>
    <string name="shecan_status_active">shecan is active</string>
    <string name="shecan_status_pro_static_active">shecan is active with static IP</string>
    <string name="shecan_status_pro_dynamic_active">shecan is active with dynamic IP</string>
    <string name="shecan_status_deactive">shecan is not active</string>
    <string name="shecan_status_connecting">You are connecting.\n This process may take some time</string>
    <string name="dynamic_ip_connection_not_ready">Connection is not ready yet. Please try again in a moment.</string>
    <string name="donate">Shecan</string>
    <string name="donate_icon">Donate Icon</string>
    <string name="logo_image">Logo Image</string>
    <string name="check_and_report">Check and Report</string>
    <string name="status_icon">Status Icon</string>
    <string name="free_shecan">Free Shecan</string>
    <string name="pro_shecan">Pro Shecan</string>
    <string name="dynamic_ip">Dynamic IP</string>
    <string name="static_ip">Static IP</string>
    <string name="please_enter_your_link_updater">Please Enter Your Link Updater</string>
    <string name="help">Help</string>
    <string name="no_active_service">The Updater Link is not valid or You don\'t have active service</string>
    <string name="purchase_service">Purchase/Renewal Service</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel</string>
    <string name="new_version_available">A new version of the app is available</string>
    <string name="site_update_dialog_description">Download the latest Site version directly and install it from inside the app.</string>
    <string name="site_update_url_missing">Update download link is not configured yet.</string>
    <string name="site_update_download_started">Downloading update...</string>
    <string name="site_update_download_failed">Update download failed.</string>
    <string name="site_update_install_permission_required">Allow installing updates from this app, then tap Update again.</string>
    <string name="site_update_downloading_percent">Downloading update... %1$d%%</string>
    <string name="site_update_install_ready">Update downloaded. Starting installer...</string>
    <string name="site_update_install">Install</string>
    <string name="out_of_range_ip_error">Your IP is not on the list of IPs introduced to Shekan!</string>
    <string name="contact_support">Contact Support</string>
    <string name="empty_link_updater_error">Please Enter Your Link Updater</string>
    <string name="false_link_updater_error">Your Link is not correct</string>
    <string name="selected_config">Selected Config</string>
    <string name="expire_date">تاریخ انقضا</string>
    <string name="serviceType">نوع سرویس</string>
    <string name="orderNo">کد سرویس</string>
    <string name="connections">سرویس‌ها</string>
    <string name="connect">اتصال</string>
    <string name="setting">تنظیمات</string>
    <string name="newConnection">جدید</string>
    <string name="expiring">در حال انقضا...</string>
    <string name="waitingForActivate">در انتظار فعال</string>
    <string name="active">فعال</string>
    <string name="readyToConnect">آماده اتصال</string>
    <string name="free">رایگان</string>
    <string name="gold">طلایی</string>
    <string name="bronze">برنزی</string>
    <string name="lightMode">روشن</string>
    <string name="darkMode">تاریک</string>
    <string name="systemSetting">خودکار</string>
    <string name="phoneOrEmail">شماره همراه یا ایمیل</string>
    <string name="sendAgain">ارسال مجدد</string>
    <string name="confirm">تأیید</string>
    <string name="loginWithOtp">ورود با رمز یکبار مصرف</string>
    <string name="inputOtpCode">لطفا رمز پیامک شده را وارد کنید</string>
    <string name="codeIsWrong">کد اشتباه است</string>
    <string name="codeIsUnCompleted">کد ناقص است</string>
    <string name="login">ورود</string>
    <string name="setPassword">تعریف رمز عبور</string>
    <string name="persianName">نام (فارسی)</string>
    <string name="persianFamilyName">نام خانوادگی (فارسی)</string>
    <string name="isLegal">سازمانی هستم</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="passwordNew">رمز عبور جدید</string>
    <string name="passwordNewRepeat">تکرار رمز عبور جدید</string>
    <string name="repeatPassword">تکرار رمز عبور</string>
    <string name="continuee">ادامه</string>
    <string name="passworsNotSame">رمزهای عبور وارد شده یکسان نمی باشند</string>
    <string name="companyName">نام شرکت</string>
    <string name="saveChange">ذخیره تغییرات</string>
    <string name="checkAgain">بررسی مجدد</string>
    <string name="buyService">خرید سرویس</string>
    <string name="familyName">نام خانوادگی</string>
    <string name="name">نام</string>
    <string name="phoneNumber">تلفن همراه</string>
    <string name="exit">خروج از حساب</string>
    <string name="nameAndFamilyNameIsRequired">نام و نام خانوادگی اجباری است</string>
    <string name="nameAndFamilyNameMustPersian">نام و نام خانوادگی باید فقط حروف فارسی باشد</string>
    <string name="connected">متصل شد</string>
    <string name="seeFromShecanPanelMyket"> مشاهده تراکنش‌ها، تیکت‌ها و پشتیبانی دامنه‌ها از طریق پنل کاربری شکن امکان‌پذیر است.</string>
    <string name="seeFromShecanPanelCafeBazaar"> مشاهده تراکنش‌ها از طریق پنل کاربری شکن امکان‌پذیر است.</string>
    <string name="title_billing_plans">خرید اشتراک</string>
    <string name="billing_store_prefix">پرداخت از طریق %1$s</string>
    <string name="billing_initial_status">قیمت‌ها بر اساس پلن و مدت از API محاسبه می‌شوند. کد تخفیف برای هر پلن جداگانه اعمال می‌شود.</string>
    <string name="billing_initial_status_no_discount">قیمت‌ها بر اساس پلن و مدت از API محاسبه می‌شوند.</string>
    <string name="billing_discount_hint">کد تخفیف</string>
    <string name="billing_have_discount_code">کد تخفیف دارم</string>
    <string name="billing_discount_info">کد تخفیف را روی همان پلنی وارد کنید که می‌خواهید بخرید.</string>
    <string name="billing_apply_discount">اعمال</string>
    <string name="billing_remove_discount">حذف</string>
    <string name="billing_loading_prices">در حال دریافت قیمت پلن‌ها...</string>
    <string name="billing_loaded_prices">قیمت %1$d پلن آماده است. Bronze فعلا غیرفعال است.</string>
    <string name="billing_plan_not_purchasable">این پلن فعلا برای خرید فعال نیست.</string>
    <string name="billing_price_not_ready">قیمت این پلن هنوز آماده نیست.</string>
    <string name="billing_purchase_start">شروع فرایند خرید %1$s از %2$s</string>
    <string name="billing_not_ready">%1$s آماده پرداخت نیست. اگر روی شبیه‌ساز هستی، اپ مارکت نصب/لاگین نیست؛ اگر روی دستگاه واقعی است، public key و اتصال مارکت را چک کن.</string>
</resources>